[package]
name = "sqlwire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = { version = "0.51", features = ["serde", "bigdecimal", "visitor"] }
bigdecimal = { version = "0.4.1", features = ["serde", "string-only"] }
# rust_decimal = { version = "1", features = ["serde-str"] }
